Add UI support for other devices, (not you IPad)

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-  <body style="background-color: #fff">
-      <div class="card border-danger" style="max-width: 20rem; margin: 2rem auto; display: none" id="danger-card" >
-        <div class="card-body text-danger">
-          <p class="card-text">Todo should have (a unique) text</p>
-        </div>
-      </div>
-    <div class="container" style="width: 40rem; margin-top: 100px">
+  <body style="background-color: #eee">
+    <div class="alert alert-danger col-xs-6 col-md-4 mx-auto mt-4" role="alert" id="alert" style="display: none; text-align: center;">
+      Todo should have (a unique) text
+    </div>
+    <div class="container col-xs-6 col-md-4 mt-5">
     </div>
   </body>
 </html>
